# TP4

./: .gitignore  pyproject.toml
encoder/: __init__.py
test/: test_encoder.py
