[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "simple-encoder"
version = "1.0.0"
description = "Simple Unicode encoding detection and conversion tool"
requires-python = ">=3.11"
authors = [
    {name = "Developer", email = "dev@example.com"}
]
keywords = ["encoding", "unicode", "utf-8", "utf-16", "utf-32"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Text Processing",
    "Topic :: Utilities",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[project.scripts]
encoder = "encoder:main"

[tool.setuptools]
packages = ["encoder"]
